--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-hotdog">
-            <img src="assets/img/HERRERAS/IMG_4221.jpg" class="menu-img" alt="">
+            <img src="assets/img/HERRERAS/IMG_4173.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Hotdog Vaquero</a><span>$42.00</span>
             </div>
@@ -187,7 +187,7 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-hotdog">
-            <img src="assets/img/HERRERAS/IMG_4173.jpg" class="menu-img" alt="">
+            <img src="assets/img/HERRERAS/IMG_4221.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Hotdog Italiano</a><span>$37.00</span>
             </div>
@@ -207,7 +207,7 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-postres">
-            <img src="assets/img/menu/cake.jpg" class="menu-img" alt="">
+            <img src="assets/img/Carlota-de-limon.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Carlota de limón</a><span>$17.00</span>
             </div>
@@ -217,7 +217,7 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-postres">
-            <img src="assets/img/menu/pexels-krisztina-papp-2586924.jpg" class="menu-img" alt="">
+            <img src="assets/img/Helado-de-oreo-parve.jpg" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Helado de oreo</a><span>$17.00</span>
             </div>
@@ -227,7 +227,7 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-chescos">
-            <img src="assets/img/menu/pepsi-logo-1.png" class="menu-img" alt="">
+            <img src="assets/img/Pepsi-logo.png" class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Familia Pepsi</a><span>$$</span>
             </div>
